force-app/main/default/objects/Finance_Setting__mdt/Finance_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Finance Setting</label>
    <pluralLabel>Finance Settings</pluralLabel>
</CustomObject>