force-app/main/default/objects/Finance_Setting__mdt/fields/Days_over_due__c.field-meta.xml
<CustomField>
    <fullName>Days_over_due__c</fullName>
    <label>Days over due</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>