force-app/main/default/objects/Finance_Setting__mdt/fields/Lower_Delinquency_Status__c.field-meta.xml
<CustomField>
    <fullName>Lower_Delinquency_Status__c</fullName>
    <label>Lower Delinquency Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quotes Approved</fullName>
                <default>true</default>
                <label>Quotes Approved</label>
            </value>
            <value>
                <fullName>Orders Blocked</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>