force-app/main/default/objects/Finance_Setting__mdt/fields/Lower_Delinquency_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Lower_Delinquency_Threshold__c</fullName>
    <inlineHelpText>Lower threshold limit to allow quotes to be created</inlineHelpText>
    <label>Lower Delinquency Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>