force-app/main/default/objects/Finance_Setting__mdt/fields/Upper_Delinquency_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Upper_Delinquency_Threshold__c</fullName>
    <inlineHelpText>Upper threshold limit to prevent quotes/orders from being created</inlineHelpText>
    <label>Upper Delinquency Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>