force-app/main/default/objects/Finance_Setting__mdt/listViews/All_Delinquency_Rules.listView-meta.xml
<ListView>
    <fullName>All_Delinquency_Rules</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Lower_Delinquency_Threshold__c</columns>
    <columns>Lower_Delinquency_Status__c</columns>
    <columns>Upper_Delinquency_Threshold__c</columns>
    <columns>Upper_Delinquency_Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Delinquency Rules</label>
    <language>en_US</language>
</ListView>