force-app/main/default/objects/Finance_Setting__mdt/listViews/Default.listView-meta.xml
<ListView>
    <fullName>Default</fullName>
    <columns>MasterLabel</columns>
    <columns>Lower_Delinquency_Status__c</columns>
    <columns>Lower_Delinquency_Threshold__c</columns>
    <columns>Upper_Delinquency_Status__c</columns>
    <columns>Upper_Delinquency_Threshold__c</columns>
    <filterScope>Everything</filterScope>
    <label>Default</label>
    <language>en_US</language>
</ListView>